feat(core): components: brx-icon

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -23,5 +23,15 @@
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <h1>Ícone</h1>
+
+      <hr />
+
+      <brx-icon name="camera"></brx-icon>
+
+      <brx-icon name="bicycle"></brx-icon>
+    </section>
+  </body>
 </html>
