--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -25,17 +25,7 @@
   </head>
   <body>
     <section>
-      <h1>Ícone</h1>
-
-      <hr />
-
-      <brx-icon name="camera"></brx-icon>
-
-      <brx-icon name="bicycle"></brx-icon>
-    </section>
-
-    <section>
-      <h1>Accordion</h1>
+      <h1>Accordion (legado)</h1>
 
       <hr />
 
@@ -61,88 +51,100 @@
       </script>
     </section>
 
-    <!-- <copper-container>
-      <h1>Utilitários</h1>
+    <section>
+      <h1>Avatar</h1>
 
-      <section>
-        <section>
-          <h1>Tooltip</h1>
-
-          <div class="mb-3">
-            <div>
-              <copper-tooltip target="#sample-info-top">
-                <a class="h5" href="javascript:void(0);">Informação</a>
-              </copper-tooltip>
-
-              <copper-tooltip-content id="sample-info-top" info="info" place="top">
-                <span class="text" role="tooltip">Fulano de Tal da Silva</span>
-                <span class="subtext">Diretor Presidente</span>
-              </copper-tooltip-content>
-            </div>
-
-            <hr />
-
-            <div>
-              <copper-tooltip text="Texto de Informação!">
-                <a href="javascript:void(0);"><img src="https://picsum.photos/50" alt="Avatar" /></a>
-              </copper-tooltip>
-            </div>
-
-            <div class="col-md-6 text-center">
-              <div class="mb-3">
-                <copper-tooltip target="#sample-info-top">
-                  <a class="h5" href="javascript:void(0);">Informação</a>
-                </copper-tooltip>
-
-                <copper-tooltip-content id="sample-info-top" info="info" place="top">
-                  <span class="text" role="tooltip">Fulano de Tal da Silva</span><span class="subtext">Diretor Presidente</span>
-                </copper-tooltip-content>
-              </div>
-              <div class="mb-3">
-                <copper-tooltip target="#sample-success-left">
-                  <a class="h5" href="javascript:void(0);">Sucesso</a>
-                </copper-tooltip>
-
-                <copper-tooltip-content id="sample-success-left" success="success" place="left">
-                  <span class="text" role="tooltip">Incluído com Sucesso!</span><span class="subtext">Protocolo 000.22-11</span>
-                </copper-tooltip-content>
-              </div>
-              <div class="mb-3">
-                <copper-tooltip target="#sample-erro-right" error="error" place="right">
-                  <a class="h5" href="javascript:void(0);">Erro</a>
-                </copper-tooltip>
-
-                <copper-tooltip-content id="sample-erro-right" error="error" place="right">
-                  <span class="text" role="tooltip">Não foi possível logar!</span><span class="subtext">Verifique seus dados</span>
-                </copper-tooltip-content>
-              </div>
-              <div class="mb-3">
-                <copper-tooltip target="#sample-warning-bottom">
-                  <a class="h5" href="javascript:void(0);">Advertência</a>
-                </copper-tooltip>
-
-                <copper-tooltip-content id="sample-warning-bottom" warning="warning" place="bottom">
-                  <span class="text" role="tooltip">O Caps Lock está ligadoo!</span><span class="subtext">Desabilite antes de digitar</span>
-                </copper-tooltip-content>
-              </div>
-            </div>
-          </div>
-        </section>
-      </section>
-    </copper-container>
-
-    <copper-container>
       <hr />
 
-      <section>
-        <h1>Avatar</h1>
+      <brx-avatar> </brx-avatar>
+      <brx-avatar size="medium" name="Frederico"> </brx-avatar>
+      <brx-avatar size="large" name="Pedro" src="https://picsum.photos/id/287/400"> </brx-avatar>
+    </section>
+
+    <section>
+      <h1>Ícone</h1>
+
+      <hr />
+
+      <brx-icon name="camera"></brx-icon>
+
+      <brx-icon name="bicycle"></brx-icon>
+    </section>
+
+    <section>
+      <h1>Tooltip</h1>
+
+      <div class="mb-3">
+        <div>
+          <brx-tooltip target="#sample-info-top">
+            <a class="h5" href="javascript:void(0);">Informação</a>
+          </brx-tooltip>
+
+          <brx-tooltip-content id="sample-info-top" info="info" place="top">
+            <span class="text" role="tooltip">Fulano de Tal da Silva</span>
+            <span class="subtext">Diretor Presidente</span>
+          </brx-tooltip-content>
+        </div>
 
         <hr />
 
-        <copper-avatar> </copper-avatar>
-        <copper-avatar size="medium" name="Frederico"> </copper-avatar>
-        <copper-avatar size="large" name="Pedro" picture-src="https://picsum.photos/id/287/400"> </copper-avatar>
+        <div>
+          <brx-tooltip text="Texto de Informação!">
+            <a href="javascript:void(0);"><img src="https://picsum.photos/50" alt="Avatar" /></a>
+          </brx-tooltip>
+        </div>
+
+        <div class="col-md-6 text-center">
+          <div class="mb-3">
+            <brx-tooltip target="#sample-info-top">
+              <a class="h5" href="javascript:void(0);">Informação</a>
+            </brx-tooltip>
+
+            <brx-tooltip-content id="sample-info-top" color="info" place="top">
+              <span class="text" role="tooltip">Fulano de Tal da Silva</span><span class="subtext">Diretor Presidente</span>
+            </brx-tooltip-content>
+          </div>
+          <div class="mb-3">
+            <brx-tooltip target="#sample-success-left">
+              <a class="h5" href="javascript:void(0);">Sucesso</a>
+            </brx-tooltip>
+
+            <brx-tooltip-content id="sample-success-left" color="success" place="left">
+              <span class="text" role="tooltip">Incluído com Sucesso!</span><span class="subtext">Protocolo 000.22-11</span>
+            </brx-tooltip-content>
+          </div>
+          <div class="mb-3">
+            <brx-tooltip target="#sample-erro-right" place="right">
+              <a class="h5" href="javascript:void(0);">Erro</a>
+            </brx-tooltip>
+
+            <brx-tooltip-content id="sample-erro-right" color="error" place="right">
+              <span class="text" role="tooltip">Não foi possível logar!</span><span class="subtext">Verifique seus dados</span>
+            </brx-tooltip-content>
+          </div>
+          <div class="mb-3">
+            <brx-tooltip target="#sample-warning-bottom">
+              <a class="h5" href="javascript:void(0);">Advertência</a>
+            </brx-tooltip>
+
+            <brx-tooltip-content id="sample-warning-bottom" color="warning" place="bottom">
+              <span class="text" role="tooltip">O Caps Lock está ligadoo!</span><span class="subtext">Desabilite antes de digitar</span>
+            </brx-tooltip-content>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <brx-container>
+      <h1>Utilitários</h1>
+
+      <section>
+        
       </section>
+    </brx-container>
+
+    <brx-container>
+
 
       <hr />
 
@@ -157,12 +159,12 @@
 
         <div>
           <p>Indeterminado</p>
-          <copper-loading></copper-loading>
+          <brx-loading></brx-loading>
         </div>
 
         <div>
           <p>Determinado</p>
-          <copper-loading progress="50"></copper-loading>
+          <brx-loading progress="50"></brx-loading>
         </div>
       </section>
 
@@ -172,38 +174,38 @@
         <div>
           <p>Estados</p>
 
-          <copper-button variant="primary" disabled>Desativado</copper-button>
-          <copper-button variant="primary" active>Ativo</copper-button>
-          <copper-button variant="primary" loading></copper-button>
+          <brx-button variant="primary" disabled>Desativado</brx-button>
+          <brx-button variant="primary" active>Ativo</brx-button>
+          <brx-button variant="primary" loading></brx-button>
         </div>
 
         <div>
           <p>Ênfases</p>
 
-          <copper-button> oi pq vc me odeia? </copper-button>
-          <copper-button variant="primary"> oi pq vc me odeia? </copper-button>
-          <copper-button variant="secondary"> oi pq vc me odeia? </copper-button>
+          <brx-button> oi pq vc me odeia? </brx-button>
+          <brx-button variant="primary"> oi pq vc me odeia? </brx-button>
+          <brx-button variant="secondary"> oi pq vc me odeia? </brx-button>
         </div>
 
         <div>
           <div class="p-3">
-            <copper-button variant="secondary" size="large">Baixa densidade</copper-button>
-            <copper-button variant="secondary" size="medium">Padrão</copper-button>
-            <copper-button variant="secondary" size="small">Alta densidade</copper-button>
+            <brx-button variant="secondary" size="large">Baixa densidade</brx-button>
+            <brx-button variant="secondary" size="medium">Padrão</brx-button>
+            <brx-button variant="secondary" size="small">Alta densidade</brx-button>
           </div>
           <div class="p-3">
-            <copper-button variant="secondary" size="large" circle aria-label="Ícone ilustrativo"><copper-icon name="city"></copper-icon></copper-button>
-            <copper-button variant="secondary" size="medium" circle aria-label="Ícone ilustrativo"><copper-icon name="city"></copper-icon></copper-button>
-            <copper-button variant="secondary" size="small" circle aria-label="Ícone ilustrativo"><copper-icon name="city"></copper-icon></copper-button>
+            <brx-button variant="secondary" size="large" circle aria-label="Ícone ilustrativo"><brx-icon name="city"></brx-icon></brx-button>
+            <brx-button variant="secondary" size="medium" circle aria-label="Ícone ilustrativo"><brx-icon name="city"></brx-icon></brx-button>
+            <brx-button variant="secondary" size="small" circle aria-label="Ícone ilustrativo"><brx-icon name="city"></brx-icon></brx-button>
           </div>
         </div>
 
         <div class="p-3 bg-gray-60">
-          <copper-button block dark-mode variant="primary" class="mb-3">Primário</copper-button>
-          <copper-button block dark-mode variant="secondary" class="mb-3">Secundário</copper-button>
-          <copper-button block dark-mode variant="default">Terciário</copper-button>
+          <brx-button block dark-mode variant="primary" class="mb-3">Primário</brx-button>
+          <brx-button block dark-mode variant="secondary" class="mb-3">Secundário</brx-button>
+          <brx-button block dark-mode variant="default">Terciário</brx-button>
         </div>
       </section>
-    </copper-container> -->
+    </brx-container> -->
   </body>
 </html>
