feat(core): components: brx-loading (#7)
Closes #7

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -135,39 +135,34 @@
       </div>
     </section>
 
-    <!-- <brx-container>
-      <h1>Utilitários</h1>
+    <section>
+      <h1>Loading</h1>
 
-      <section>
-        
-      </section>
-    </brx-container>
+      <div>
+        <p>Indeterminado</p>
 
-    <brx-container>
-
-
-      <hr />
-
-      <section>
-        <h1>Breadcrumb</h1>
-
-        <p>TODO</p>
-      </section>
-
-      <section>
-        <h1>Loading</h1>
-
-        <div>
-          <p>Indeterminado</p>
+        <div class="p-3">
+          <brx-loading size="small"></brx-loading>
+        </div>
+        <div class="p-3">
           <brx-loading></brx-loading>
         </div>
+      </div>
 
-        <div>
-          <p>Determinado</p>
+      <div>
+        <p>Determinado</p>
+
+        <div class="d-flex">
+          <brx-loading progress="0"></brx-loading>
+          <brx-loading progress="25"></brx-loading>
           <brx-loading progress="50"></brx-loading>
+          <brx-loading progress="75"></brx-loading>
+          <brx-loading progress="100"></brx-loading>
         </div>
-      </section>
+      </div>
+    </section>
 
+    <!-- <brx-container>
       <section>
         <h1>Button</h1>
 
