feat(core): components: brx-scrim and brx-scrim-trigger (#9)
Closes #9

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -218,6 +218,25 @@
     <hr />
 
     <section>
+      <h1>Scrim</h1>
+
+      <brx-scrim id="scrim-1">
+        <div class="bg-gray-10 p-4">
+          <p>Conteúdo!</p>
+
+          <brx-button variant="secondary" data-scrim-dismiss>Fechar</brx-button>
+          <brx-button variant="primary">noop</brx-button>
+        </div>
+      </brx-scrim>
+
+      <brx-scrim-trigger target="#scrim-1">
+        <brx-button variant="primary">Testar Scrim</brx-button>
+      </brx-scrim-trigger>
+    </section>
+
+    <hr />
+
+    <section>
       <h1>Tooltip</h1>
 
       <div class="mb-3">
