feat(core): components: brx-checkbox (#13)
`data-parent` and `data-child` not implemented yet - see
https://github.com/copperui/copperui/issues/13#issuecomment-1374668322

Closes #13

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -177,6 +177,19 @@
     <hr />
 
     <section>
+      <h2>Checkbox</h2>
+
+      <div>
+        <brx-checkbox label="Oi"></brx-checkbox>
+        <brx-checkbox checked disabled label="Oi"></brx-checkbox>
+        <brx-checkbox invalid label="Oi"></brx-checkbox>
+        <brx-checkbox valid label="Oi"></brx-checkbox>
+      </div>
+    </section>
+
+    <hr />
+
+    <section>
       <h1>Ícone</h1>
 
       <hr />
