feat(core): components: brx-radio + brx-radio-group (#14)
Closes #14

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -231,6 +231,36 @@
     <hr />
 
     <section>
+      <h1>Radio</h1>
+
+      <hr />
+
+      <div class="py-3">
+        <h2>Largado</h2>
+
+        <brx-radio label="Oi" name="rex1" value="a"></brx-radio>
+        <brx-radio label="Oi" name="rex1" value="b" disabled></brx-radio>
+        <brx-radio label="Oi" name="rex1" value="c" invalid></brx-radio>
+        <brx-radio label="Oi" name="rex1" value="d" valid></brx-radio>
+      </div>
+
+      <hr />
+
+      <div class="py-3">
+        <h2>Radio Group</h2>
+
+        <brx-radio-group value="c">
+          <brx-radio label="Oi" value="a"></brx-radio>
+          <brx-radio label="Oi" value="b" disabled></brx-radio>
+          <brx-radio label="Oi" value="c" invalid></brx-radio>
+          <brx-radio label="Oi" value="d" valid></brx-radio>
+        </brx-radio-group>
+      </div>
+    </section>
+
+    <hr />
+
+    <section>
       <h1>Scrim</h1>
 
       <brx-scrim id="scrim-1">
