feat(core): components: brx-divider (#18)
Closes #18

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -31,6 +31,8 @@
   <body>
     <hr />
 
+    <!-- Accordion (legado) -->
+
     <section>
       <h1>Accordion (legado)</h1>
 
@@ -69,6 +71,8 @@
       <brx-avatar size="medium" name="Frederico"> </brx-avatar>
       <brx-avatar size="large" name="Pedro" src="https://picsum.photos/id/287/400"> </brx-avatar>
     </section> -->
+
+    <!-- Button -->
 
     <section>
       <h1>Button</h1>
@@ -176,8 +180,10 @@
 
     <hr />
 
+    <!-- Checkbox -->
+
     <section>
-      <h2>Checkbox</h2>
+      <h1>Checkbox</h1>
 
       <div>
         <brx-checkbox label="Oi"></brx-checkbox>
@@ -188,6 +194,97 @@
     </section>
 
     <hr />
+
+    <!-- Divider -->
+
+    <section>
+      <h1>Divider</h1>
+
+      <div>
+        <h2>Horizontal tracejado</h2>
+
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <brx-divider class="my-3" dashed> </brx-divider>
+        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+      </div>
+
+      <div>
+        <h2>Horizontal</h2>
+
+        <div class="my-3">
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <brx-divider class="my-3"> </brx-divider>
+          <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+
+        <div class="my-3 bg-gray-60 text-pure-0 p-3">
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <brx-divider class="my-3" dark-mode> </brx-divider>
+          <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+
+        <div class="my-3 bg-gray-60 text-pure-0 p-3">
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <brx-divider class="my-3" dark-mode dashed> </brx-divider>
+          <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+      </div>
+
+      <div>
+        <h2>Vertical Tracejado</h2>
+
+        <div class="my-3">
+          <div class="d-flex">
+            <div>Voluptate ipsa iure placeat praesentium, sint deleniti consectetur quisquam neque veniam possimus, hic commodi?</div>
+            <brx-divider class="mx-3" vertical dashed></brx-divider>
+            <div>A adipisci mollitia blanditiis itaque velit laudantium voluptatum molestiae quasi.</div>
+          </div>
+        </div>
+
+        <div class="my-3">
+          <div class="d-flex">
+            <div>Voluptate ipsa iure placeat praesentium, sint deleniti consectetur quisquam neque veniam possimus, hic commodi?</div>
+            <brx-divider class="mx-3" vertical></brx-divider>
+            <div>A adipisci mollitia blanditiis itaque velit laudantium voluptatum molestiae quasi.</div>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <h2>Espessuras</h2>
+
+        <h3>
+          sm
+          <code>(padrão)</code>
+        </h3>
+
+        <div class="my-3">
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <brx-divider class="my-3" size="sm"></brx-divider>
+          <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+
+        <h3>md</h3>
+
+        <div class="my-3">
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <brx-divider class="my-3" size="md"></brx-divider>
+          <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+
+        <h3>lg</h3>
+
+        <div class="my-3">
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <brx-divider class="my-3" size="lg"></brx-divider>
+          <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <!-- Ícone -->
 
     <section>
       <h1>Ícone</h1>
@@ -200,6 +297,8 @@
     </section>
 
     <hr />
+
+    <!-- Item -->
 
     <section>
       <h1>Item</h1>
@@ -283,6 +382,8 @@
 
     <hr />
 
+    <!-- Loading -->
+
     <section>
       <h1>Loading</h1>
 
@@ -311,6 +412,8 @@
     </section>
 
     <hr />
+
+    <!-- Rádio -->
 
     <section>
       <h1>Radio</h1>
@@ -342,6 +445,8 @@
 
     <hr />
 
+    <!-- Scrim -->
+
     <section>
       <h1>Scrim</h1>
 
@@ -360,6 +465,8 @@
     </section>
 
     <hr />
+
+    <!-- Tooltip -->
 
     <section>
       <h1>Tooltip</h1>
